fixing permanent scrollbar issue

--- a/ucsrb/static/ucsrb/css/app.css
+++ b/ucsrb/static/ucsrb/css/app.css
@@ -529,7 +529,7 @@ main {
     bottom: 2.5rem;
     right: .5rem;
     top: 10vh;
-    overflow: scroll;
+    overflow: auto;
     position: absolute;
 }
     #panel.left {
